@@ -35,13 +35,11 @@ class AuthKey {
 public:
     /// @brief Length of the key - 128 bits
     const static uint8_t KEY_LEN = 16;
-    
+
     /// @brief Constructor
     ///
     /// Constructor for assigning auth keys in host reservation
-    /// Throws if the key length is greater than 16 bytes 
-    /// appends 0 to the the input if the key value is less 
-    /// than 16 bytes. Provide flexibility to store initialise the value as a string or a vector of bytes.
+    ///  Ensures the key length is not greater than 16 bytes
     /// @param string auth key to be stored
     AuthKey(const std::string key);
     
@@ -50,20 +48,20 @@ public:
     /// Constructor for generating auth keys, with no argument
     /// shall use the internal function for generationg random keys
     AuthKey(void);
-        
+
     // @brief get random string
     ///
-    /// Random string is generated by default will be used for  
+    /// Random string is generated by default will be used for
     /// the keys to be used for signing Reconfigure Message.
     /// @return auth keys
     /// @todo Move randomization function to cryptolink
-    static std::string getRandomKeyString(); 
+    static std::string getRandomKeyString();
 
     /// @brief set auth key value
     ///
-    /// Set the key value. If the value is less than 16 bytes 
-    /// append 0. If the size is greater than 16 bytes, we shall
-    /// throw an exception
+    /// Set the key value.
+    //  If the size is greater than 16 bytes, we resize to 16 Bytes
+    /// Doesnt throw an exception
     /// @param string key to be stored
     void setAuthKey(const std::string& key);
 
@@ -73,13 +71,13 @@ public:
     std::string getAuthKey() {
         return authKey_;
     }
-    
+
     /// @brief return text format for keys
     ///
     /// Although returning member would have sufficed
     /// this is added incase in future authkey is no longer std::string
     std::string ToText() const; 
-    
+
     /// 
     /// @brief equality operator
     ///
@@ -645,7 +643,6 @@ public:
     /// @brief sets key.
     ///
     /// Keys are used for signing the Reconfigure Message.
-    /// The accessor should ensure 128 characters
     void setKey(const AuthKey& key) {
         key_ = key;
     }
@@ -696,7 +693,7 @@ private:
     std::string server_host_name_;
     /// @brief Boot file name (a.k.a. file, carried in DHCPv4 message)
     std::string boot_file_name_;
-            
+
     /// @brief HostID (a unique identifier assigned when the host is stored in
     ///     MySQL, PostgreSQL or Cassandra)
     uint64_t host_id_;
@@ -719,7 +716,6 @@ private:
     //  While sending reconfigure message authentication field 
     /// shall contain MD5 hash computed using this key.
     AuthKey key_;
-
 };
 
 /// @brief Pointer to the @c Host object.
