@@ -1590,7 +1590,7 @@ TEST_F(ExpirationAllocEngine6Test, reclaimDeclinedStats) {
 
 // This test verifies that expired leases are reclaimed before they are
 // allocated to another client sending a Request message.
-/TEST_F(ExpirationAllocEngine6Test, reclaimReusedLeases) {
+TEST_F(ExpirationAllocEngine6Test, reclaimReusedLeases) {
     testReclaimReusedLeases(DHCPV6_REQUEST, false);
 }
 
